fixed white space under footer

--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -3,7 +3,7 @@ html{
   }
   
   body{
-    margin: 0 0 $header-height 0;
+    //margin: 0 0 $header-height 0;
     font-family: $body-font;
     font-size: $normal-font-size;
     background-color: $body-color;
